[project]
name = "prism-personalization"
version = "0.1.0"
description = "GSM8K benchmark with PRISM conversation and demographic conditioning."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.12.0",
  "datasets>=2.19.0",
  "matplotlib>=3.8.0",
  "python-dotenv>=1.0.1",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
  "transformers>=4.51.0",
]
